fix title align

--- a/ttojell.css
+++ b/ttojell.css
@@ -209,6 +209,7 @@
 		background: #FF9292;
 		font-size: 48px;
 		width: 400px;
+		text-align: left;
 	}
 	.navwrapper {
 		display: flex;
